<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.demo.assigment3.view.MainActivity">

    <data>

        <variable
            name="viewModel"
            type="com.demo.assigment3.viewmodel.MainViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/backButtonClick"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/left_icon"
                android:tint="@color/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/next_btn"
                android:textColor="@color/cyan"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/search_screen_title"
            android:textColor="@color/text_color"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/titleTextView"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round_corner_bg"
            android:onClick="@{()->viewModel.searchViewClick()}">

            <ImageView
                android:id="@+id/searchBtnIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/search_icon"
                android:tint="@color/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/searchBtnIcon"
                android:text="@string/search"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/mike_icon"
                android:tint="@color/text_color" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:onClick="@{()->viewModel.skipBtnClick()}"
            android:text="@string/skip_btn"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

    </RelativeLayout>

</layout>